--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -50,7 +50,7 @@
     font-size: 0.8rem;
     font-weight: 500;
     color: var(--g1200);
-    border-bottom: 1px solid var(--a50);
+    border-bottom: 1px dashed var(--a50);
 
     backdrop-filter: blur(3px);
 
