--- a/frontend/src/components/ScratchList.module.scss
+++ b/frontend/src/components/ScratchList.module.scss
@@ -30,7 +30,7 @@
     overflow: hidden;
 
     padding: 1em;
-    margin: 0;
+    margin: 0.5em 0;
 
     border: 1px solid inherit;
     border-radius: inherit;
