grow scratch codemirror

--- a/frontend/src/components/Scratch/ScratchDecompileModal.module.scss
+++ b/frontend/src/components/Scratch/ScratchDecompileModal.module.scss
@@ -36,6 +36,12 @@
 
 .editor {
     flex-grow: 1;
+
+    overflow: hidden;
+
+    :global(.cm-editor) {
+        height: 100%;
+    }
 }
 
 .loading {
