--- a/frontend/src/components/Scratch/renderTabs.module.scss
+++ b/frontend/src/components/Scratch/renderTabs.module.scss
@@ -5,6 +5,12 @@
 
 .editor {
     height: 100%;
+
+    overflow: hidden;
+
+    :global(.cm-editor) {
+        height: 100%;
+    }
 }
 
 .diffTab {
