--- a/frontend/src/components/AsyncButton.module.scss
+++ b/frontend/src/components/AsyncButton.module.scss
@@ -6,8 +6,8 @@
     border-radius: 0.4rem;
 
     min-width: 6rem;
-    max-width: 30rem;
-    overflow: auto;
+    max-width: 40rem;
+    word-wrap: break-word;
 
     display: flex;
     align-items: center;
