--- a/frontend/src/components/AsyncButton.module.scss
+++ b/frontend/src/components/AsyncButton.module.scss
@@ -7,13 +7,17 @@
 
     min-width: 6rem;
     max-width: 40rem;
-    word-wrap: break-word;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
     pointer-events: none;
+
+    pre {
+        max-width: 100%;
+        white-space: pre-wrap;
+    }
 }
 
 .asyncBtn {
