Highlight assembly line on source hover

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -29,6 +29,12 @@
     height: 1.25em;
 }
 
+.hoveredSourceRow {
+    padding: 0 4px;
+    height: 1.25em;
+    background-color: var(--a150);
+}
+
 .header {
     display: flex;
     align-items: center;
