--- a/frontend/src/pages/new.module.scss
+++ b/frontend/src/pages/new.module.scss
@@ -63,7 +63,7 @@
 
     color: var(--g1200);
     background: var(--g200);
-    font: 0.8em monospace;
+    font: 12px 'Comic Code Ligatures', Jetbrains Mono, Menlo, Monaco, 'Courier New', monospace;
     border: 1px solid var(--g500);
     border-radius: 4px;
 
