--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -16,8 +16,8 @@
     .cm-gutters,
     .cm-content {
         font-size: 12px;
-        font-family: 'Comic Code Ligatures', Jetbrains Mono, Menlo, Monaco, 'Courier New', monospace;
-        line-height: 1.7;
+        font-family: monospace;
+        line-height: 1.5;
     }
 
     .cmt-variableName {
