--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -63,7 +63,7 @@
     padding: 8px 0;
 
     user-select: text;
-    font-family: monospace;
+    font-family: var(--monospace);
     font-size: 12px;
     white-space: pre;
 }
