--- a/frontend/src/components/Diff/CompilationPanel.module.scss
+++ b/frontend/src/components/Diff/CompilationPanel.module.scss
@@ -36,7 +36,7 @@
     scrollbar-width: thin;
 
     user-select: text;
-    font-family: monospace;
+    font-family: var(--monospace);
     font-size: 12px;
     white-space: pre;
 }
