--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -63,7 +63,7 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 
-    font-family: monospace;
+    font-family: var(--monospace);
     font-size: 0.8rem;
 
     padding: 0.6em 1em;
