highlight review fixes

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -27,12 +27,10 @@
 .row {
     padding: 0 4px;
     height: 1.25em;
-}
 
-.hoveredSourceRow {
-    padding: 0 4px;
-    height: 1.25em;
-    background-color: var(--a150);
+    &.highlight {
+        background-color: var(--a150);
+    }
 }
 
 .header {
