use light highlight

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -29,7 +29,7 @@
     height: 1.25em;
 
     &.highlight {
-        background-color: var(--a150);
+        background-color: rgba(255, 255, 255, 0.1);
     }
 }
 
