--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -27,6 +27,10 @@
 .row {
     padding: 0 4px;
     height: 1.25em;
+
+    &.highlight {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 }
 
 .header {
