--- a/frontend/src/components/Diff/CompilationPanel.module.scss
+++ b/frontend/src/components/Diff/CompilationPanel.module.scss
@@ -37,6 +37,6 @@
 
     user-select: text;
     font-family: var(--monospace);
-    font-size: 12px;
+    font-size: 0.8rem;
     white-space: pre;
 }
