remove courier new

--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -2,7 +2,7 @@
 
 :root {
     --link: #3db8e9;
-    --monospace: Menlo, Monaco, "Courier New", monospace;
+    --monospace: Menlo, Monaco, monospace;
 }
 
 .themePlum {
