pointer-events:none on diff header

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -50,7 +50,7 @@
     backdrop-filter: blur(3px);
 
     user-select: none;
-    cursor: default;
+    pointer-events: none; // to select scrollbar below
 }
 
 @supports not (backdrop-filter: blur(3px)) {
