--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -1,58 +1,56 @@
 .diff {
     height: 100%;
+    position: relative;
 
-    overflow: auto;
-
-    scrollbar-color: #fff3 transparent;
-    scrollbar-width: thin;
-
-    position: relative; // for .header position:absolute
+    display: flex;
+    flex-direction: column;
 }
 
-.outdated {
-    filter: grayscale(25%) brightness(70%);
+.bodyContainer {
+    flex-grow: 1;
 }
 
 .bar {
     cursor: col-resize;
     background: var(--a50);
+    z-index: 99;
 }
 
-.row {
-    padding: 2px 4px;
-    height: 1.5em;
-
-    &.highlight {
-        background-color: rgba(255, 255, 255, 0.025);
-
-        .lineNumber {
-            color: #c6c6c6;
-        }
-    }
+.headers {
+    display: flex;
+    width: 100%;
+    overflow-y: scroll;
 }
 
 .header {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     gap: 4px;
 
     height: 3em;
     padding: 0 1em;
 
-    position: absolute;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-
     font-size: 0.8rem;
     font-weight: 500;
     color: var(--g1200);
     border-bottom: 1px dashed var(--a50);
 
-    backdrop-filter: blur(3px);
-
     user-select: none;
-    pointer-events: none; // to select scrollbar below
+
+    &:nth-child(1) {
+        width: var(--diff-base-width);
+    }
+
+    &:nth-child(2) {
+        width: var(--diff-current-width);
+        filter: var(--diff-current-filter);
+        border-left: 1px solid var(--a50);
+    }
+
+    &:nth-child(3) {
+        width: var(--diff-previous-width);
+        border-left: 1px solid var(--a50);
+    }
 }
 
 @supports not (backdrop-filter: blur(3px)) {
@@ -69,15 +67,68 @@
     font-family: var(--monospace);
     font-size: 0.8rem;
     white-space: pre;
+
+    list-style: none;
+
+    scrollbar-color: #fff3 transparent;
+    scrollbar-width: thin;
 }
 
-.lineNumber {
-    display: inline-block;
+.row {
+    height: 1.5em;
+    line-height: 1.5em;
 
-    color: #676e95;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
 
-    min-width: 3ch;
-    text-align: right;
+    > .cell {
+        overflow: hidden;
+        white-space: nowrap;
+
+        color: #b3c1d3;
+
+        padding: 0 1em;
+
+        &.highlight {
+            background-color: rgba(255, 255, 255, 0.025);
+
+            .lineNumber {
+                color: #c6c6c6;
+            }
+        }
+
+        &:nth-child(1) {
+            width: var(--diff-base-width);
+        }
+
+        &:nth-child(2) {
+            width: var(--diff-current-width);
+            filter: var(--diff-current-filter);
+            border-left: 1px solid var(--a50);
+        }
+
+        &:nth-child(3) {
+            width: var(--diff-previous-width);
+            border-left: 1px solid var(--a50);
+        }
+    }
+}
+
+.cell span {
+    min-width: 1ch;
+
+    &.lineNumber {
+        display: inline-block;
+
+        color: #676e95;
+
+        min-width: 24px;
+        padding: 0 3px 0 5px;
+        text-align: right;
+
+        user-select: none;
+    }
 }
 
 .immediate { color: #6d6dff; }
