--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -56,6 +56,59 @@
     }
 }
 
+.cm-panel {
+    font-size: 1rem;
+
+    // from Button.module.scss
+    .cm-button {
+        border-radius: 4px;
+        padding: 0.4em 0.8em;
+
+        font-size: 0.8rem;
+        font-weight: 500;
+
+        user-select: none;
+        appearance: none;
+
+        display: inline-flex;
+        gap: 0.5em;
+        align-items: center;
+
+        background: transparent;
+        color: var(--a800);
+        border: 1px solid var(--g500);
+
+        &:not(:disabled) {
+            cursor: pointer;
+
+            &:hover {
+                color: var(--a900);
+                border-color: var(--g800);
+            }
+        }
+    }
+
+    .cm-textfield {
+        padding: 0.4em 0.6em;
+
+        color: var(--g1200);
+        background: var(--g200);
+        font: 0.8rem var(--monospace);
+        border: 1px solid var(--g500);
+        border-radius: 4px;
+
+        outline: none !important;
+
+        &::-webkit-input-placeholder {
+            color: var(--g700);
+        }
+    }
+
+    input[type=checkbox] {
+        vertical-align: middle;
+    }
+}
+
 html {
     font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
