--- a/frontend/src/components/Scratch/renderTabs.module.scss
+++ b/frontend/src/components/Scratch/renderTabs.module.scss
@@ -5,11 +5,30 @@
 
 .editor {
     height: 100%;
+
+    overflow: hidden;
+
+    :global(.cm-editor) {
+        height: 100%;
+    }
+
+    :global(.cm-gutters),
+    :global(.cm-content) {
+        margin: 1em;
+    }
+
+    :global(.cm-gutters) {
+        margin-right: 0;
+    }
+
+    :global(.cm-content) {
+        margin-left: 0;
+    }
 }
 
 .diffTab {
     display: flex;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .about {
