--- a/frontend/src/components/Diff/CompilationPanel.module.scss
+++ b/frontend/src/components/Diff/CompilationPanel.module.scss
@@ -36,7 +36,7 @@
     scrollbar-width: thin;
 
     user-select: text;
-    font-family: monospace;
-    font-size: 12px;
+    font-family: var(--monospace);
+    font-size: 0.8rem;
     white-space: pre;
 }
