--- a/frontend/src/pages/new.module.scss
+++ b/frontend/src/pages/new.module.scss
@@ -63,7 +63,7 @@
 
     color: var(--g1200);
     background: var(--g200);
-    font: 0.8em monospace;
+    font: 0.8rem var(--monospace);
     border: 1px solid var(--g500);
     border-radius: 4px;
 
@@ -88,6 +88,12 @@
 
     border: 1px solid var(--g500);
     border-radius: 4px;
+
+    overflow: hidden;
+
+    :global(.cm-editor) {
+        height: 100%;
+    }
 }
 
 .compilerContainer {
