Trying to add a new section

--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -82,6 +82,13 @@
     margin-top: 1em;
 }
 
+.objdumpFlags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+    margin-top: 1em;
+}
+
 .flag {
     flex-grow: 1;
     display: inline-block;
