--- a/frontend/src/components/Scratch/ScratchDecompileModal.module.scss
+++ b/frontend/src/components/Scratch/ScratchDecompileModal.module.scss
@@ -6,6 +6,8 @@
     flex-direction: column;
 
     padding: 1.5em;
+
+    overflow-y: auto;
 }
 
 .main {
@@ -14,6 +16,10 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    @media screen and (min-height: 600px) {
+        overflow-y: hidden;
+    }
 
     > h2 {
         font-size: 1.4em;
@@ -38,6 +44,10 @@
     flex-grow: 1;
 
     overflow: hidden;
+
+    @media screen and (max-height: 600px) {
+        height: 200px;
+    }
 
     :global(.cm-editor) {
         height: 100%;
