fix diff current column not greying out when compile fails

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -79,6 +79,10 @@
                 color: #c6c6c6;
             }
         }
+
+        &:nth-child(2) {
+            filter: var(--diff-current-filter);
+        }
     }
 }
 
