--- a/frontend/src/components/ScratchList.module.scss
+++ b/frontend/src/components/ScratchList.module.scss
@@ -91,7 +91,18 @@
     }
 
     .metadata {
+        display: flex;
+        align-items: flex-end;
+
         color: var(--g700);
+
+        > span {
+            flex-grow: 1;
+        }
+
+        .actions {
+            padding-top: 0.25em;
+        }
     }
 }
 
