--- a/frontend/src/pages/[project].module.scss
+++ b/frontend/src/pages/[project].module.scss
@@ -7,6 +7,15 @@
     padding: 1em;
 
     cursor: default;
+
+    > h2 {
+        color: var(--g1400);
+        font-weight: 600;
+
+        svg {
+            margin-right: 0.4em;
+        }
+    }
 }
 
 .loadingContainer {
