--- a/frontend/src/pages/[project]/[function].module.scss
+++ b/frontend/src/pages/[project]/[function].module.scss
@@ -59,6 +59,9 @@
         gap: 0.5em;
         padding: 0 0 0.5em 1em;
 
+        color: var(--g1400);
+        font-weight: 600;
+
         > :first-child {
             flex-grow: 1;
         }
