Allow specifying custom `objdump` flags (#427)
* Trying to add a new section

* objdump section is no longer borken

* objdump section is a bit more independent from the compilerargs one

* add objdump_flags to database

* Allow to save objdump flags on change

* Actually pass the objdump flags to objdump

* Allow adding objdump flags to presets

* add short description to compilers.json

* filter_objdump_flags

* Introduce GCCMIPSCompiler class

* Add -M gekko / broadway by default for gc/wii compilers

* format autogenerated file

* type annotation

* Disable enum trailing comma warnings on Majora's Mask

* wip

* flags as array, backend parsing, frontend cleanup

* style scratch options

* loose ends

* only show diff opts section if there are any options to show

* fix mypy

Co-authored-by: Ethan Roseman <ethteck@gmail.com>
Co-authored-by: Alex Bates <alex@nanaian.town>

--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -1,7 +1,7 @@
 .header {
     padding: 1.5em;
     padding-bottom: 0;
-    background: var(--g300);
+    background: transparent;
 
     display: flex;
     flex-direction: row;
@@ -14,19 +14,27 @@
 
 .header > * {
     flex-shrink: 0;
+    border-radius: 0;
 }
 
-.container {
+.section {
     padding: 1.5em;
-    background: var(--g300);
-}
-
-.header:not([data-is-popup]),
-.container:not([data-is-popup]) {
     border-radius: 0;
     background: transparent;
+}
 
-    /* border-bottom: 1px solid var(--g400); */
+.section:not(:last-child) {
+    border-bottom: 1px solid var(--a100);
+}
+
+.heading {
+    font-size: 1.1em;
+    font-weight: 500;
+
+    padding: 0.5em;
+    padding-top: 0;
+
+    color: var(--g1200);
 }
 
 .preset {
@@ -76,6 +84,13 @@
 }
 
 .flags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
+    margin-top: 1em;
+}
+
+.diffFlags {
     display: flex;
     flex-wrap: wrap;
     gap: 0.5em;
