--- a/frontend/src/components/PrScratchBasket.module.scss
+++ b/frontend/src/components/PrScratchBasket.module.scss
@@ -37,11 +37,16 @@
     }
 }
 
+.list {
+    padding-top: 0.75em;
+    padding-bottom: 0.75em;
+}
+
 .scratch {
     list-style: none;
 
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-top: 0.1em;
+    padding-bottom: 0.1em;
 
     display: flex;
     align-items: center;
