link to family in AboutScratch

--- a/frontend/src/components/Scratch/AboutScratch.module.scss
+++ b/frontend/src/components/Scratch/AboutScratch.module.scss
@@ -38,6 +38,10 @@
         width: 100px;
         flex-shrink: 0;
     }
+
+    a:hover {
+        color: var(--link);
+    }
 }
 
 .scratchLinkContainer {
