--- a/frontend/src/components/compiler/CompilerOpts.module.css
+++ b/frontend/src/components/compiler/CompilerOpts.module.css
@@ -63,13 +63,9 @@
 
     background: var(--g200);
     border: 1px solid var(--g400);
-    border-left: 0;
     color: var(--frog-secondary);
 
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-radius: 4px;
 
     font-family: var(--monospace);
     font-size: 0.8rem;
@@ -81,6 +77,12 @@
 
 .textbox::-webkit-input-placeholder {
     color: var(--g500);
+    font-family: var(--font-ui);
+}
+
+.compilerSelect + .textbox {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 .flags {
@@ -137,10 +139,16 @@
     border-radius: 0.5em;
 }
 
-.flagSetName {
+.flagSetName,
+.diffLabel label {
     cursor: default;
     font-size: 0.8rem;
     padding: 0.6em 1em;
     padding-bottom: 0.2em;
     color: var(--g800);
+}
+
+.diffLabel input {
+    display: block;
+    width: 100%;
 }
