--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -3,7 +3,7 @@
 :root {
     --link: #3db8e9;
     --monospace: "Menlo", "Monaco", monospace;
-    --font-ui: -apple-system, "BlinkMacSystemFont", "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    --font-ui: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
 
 .themePlum {
