use grid instead of flex in PlatformSelect

--- a/frontend/src/components/PlatformSelect/PlatformSelect.module.scss
+++ b/frontend/src/components/PlatformSelect/PlatformSelect.module.scss
@@ -1,9 +1,8 @@
 .container {
     list-style: none;
 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 8px;
 }
 
