Highlight tokens in the diff view on click

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -6,6 +6,11 @@
     flex-direction: column;
 }
 
+.highlighted {
+    background-color: #777 !important;
+    box-shadow: 0 0 2px #fff;
+}
+
 .bodyContainer {
     flex-grow: 1;
 }
