Highlight tokens in the diff view on click (#472)
* Highlight tokens in the diff view on click

* update style

* fix types

Co-authored-by: Alex Bates <alex@nanaian.town>

--- a/frontend/src/components/Diff/Diff.module.scss
+++ b/frontend/src/components/Diff/Diff.module.scss
@@ -72,6 +72,8 @@
 
         padding: 0 1em;
 
+        cursor: default;
+
         &.highlight {
             background-color: rgba(255, 255, 255, 0.05);
 
@@ -128,3 +130,12 @@
 .rotation6 { color: lightcyan; }
 .rotation7 { color: lightgreen; }
 .rotation8 { color: grey; }
+
+.highlighted {
+    color: white;
+    background-color: #aa8b00;
+}
+
+.highlightable {
+    cursor: pointer;
+}
